Make changes to Link inline signup (#7848)
* Make changes to Link inline signup

Show phone number field first for implicit user consent if all fields have pre-filled values

* Minor UX tweaks

* Update tests

* Use correct logic if only name isn't prefilled

* Auto-advance focus improvements

* Update detekt baseline

* Update tests

* Fix test and lint

* Update API

* Update `DefaultBillingAddressSettingsDefinition` to allow random email

This makes testing Link inline signup easier.

* Fix issue of disappearing signup during checkout

* Fix dropdown focus issue and add auto-advance

* Fix rebase issues

* Fix UI test issue

* Remove commented code

* Correctly pass along unused FocusRequester

* Add screenshot tests

* Update Link icon tint and progress indicator color

* Fix build error

* Fix lint

* Fix screenshots on CI

* Fix NoSuchMethodError in Hamcrest

--- a/link/build.gradle
+++ b/link/build.gradle
@@ -3,6 +3,7 @@ apply from: configs.androidLibrary
 apply plugin: 'com.google.devtools.ksp'
 apply plugin: "org.jetbrains.kotlin.plugin.parcelize"
 apply plugin: 'org.jetbrains.kotlin.plugin.serialization'
+apply plugin: 'app.cash.paparazzi'
 
 dependencies {
     implementation project(':payments-core')
@@ -36,6 +37,7 @@ dependencies {
     testImplementation project(':payments-core')
     testImplementation project(':payments-core-testing')
     testImplementation project(':payments-ui-core')
+    testImplementation testLibs.hamcrest
     testImplementation testLibs.junit
     testImplementation testLibs.kotlin.junit
     testImplementation testLibs.truth
