--- a/bitrise.yml
+++ b/bitrise.yml
@@ -246,7 +246,7 @@ workflows:
       - script@1:
           title: Check updated screenshots
           inputs:
-            - content: ruby scripts/check_for_changed_paymentsheet_screenshots.rb
+            - content: gem install octokit && ruby scripts/check_for_changed_paymentsheet_screenshots.rb
   run-paymentsheet-instrumentation-tests:
     before_run:
       - start_emulator
