--- a/payments-ui-core/build.gradle
+++ b/payments-ui-core/build.gradle
@@ -42,6 +42,8 @@ dependencies {
     testImplementation testLibs.androidx.core
     testImplementation testLibs.androidx.fragment
     testImplementation testLibs.androidx.truth
+    testImplementation testLibs.androidx.composeUi
+    testImplementation testLibs.hamcrest
     testImplementation testLibs.junit
     testImplementation testLibs.json
     testImplementation testLibs.kotlin.annotations
