--- a/financial-connections/build.gradle
+++ b/financial-connections/build.gradle
@@ -90,8 +90,7 @@ android {
     kotlinOptions {
         freeCompilerArgs += [
                 "-Xopt-in=kotlin.RequiresOptIn",
-                "-Xopt-in=androidx.compose.material.ExperimentalMaterialApi",
-                "-Xcontext-receivers"
+                "-Xopt-in=androidx.compose.material.ExperimentalMaterialApi"
         ]
     }
 
