--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -57,7 +57,7 @@ ext.versions = [
         places                      : '3.3.0',
         playServicesCoroutines      : '1.7.3',
         playServicesTfLite          : '16.0.1',
-        playServicesWallet          : '19.2.1',
+        playServicesWallet          : '19.3.0-beta01',
         retrofit                    : '2.9.0',
         robolectric                 : '4.11.1',
         shot                        : '5.14.1',
