--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -53,6 +53,7 @@ ext.versions = [
         okhttp                      : '4.12.0',
         okio                        : '3.7.0',
         paparazzi                   : '1.2.0',
+        poko                        : '0.15.2',
         payButtonCompose            : '0.1.3',
         places                      : '3.3.0',
         playServicesCoroutines      : '1.7.3',
@@ -82,6 +83,7 @@ ext.buildLibs = [
         kotlinGradlePlugin          : "org.jetbrains.kotlin:kotlin-gradle-plugin:${versions.kotlin}",
         kotlinSerializationPlugin   : "org.jetbrains.kotlin:kotlin-serialization:${versions.kotlin}",
         paparazzi                   : "app.cash.paparazzi:paparazzi-gradle-plugin:${versions.paparazzi}",
+        poko                        : "dev.drewhamilton.poko:poko-compiler-plugin:${versions.poko}",
         shot                        : "com.karumi:shot:${versions.shot}",
 ]
 
