--- a/paymentsheet/build.gradle
+++ b/paymentsheet/build.gradle
@@ -4,6 +4,7 @@ apply plugin: 'com.google.devtools.ksp'
 apply plugin: "org.jetbrains.kotlin.plugin.parcelize"
 apply plugin: 'org.jetbrains.kotlin.plugin.serialization'
 apply plugin: 'app.cash.paparazzi'
+apply plugin: 'dev.drewhamilton.poko'
 
 dependencies {
     implementation project(":link")
