Run EmergeTools if FC sample app changes

--- a/.github/workflows/financialconnections_pull_request.yml
+++ b/.github/workflows/financialconnections_pull_request.yml
@@ -3,6 +3,7 @@ on:
   pull_request:
     paths:
       - 'financial-connections/**'
+      - 'financial-connections-example/**'
       - 'stripe-core/**'
       - 'payments-model/**'
       - 'dependencies.gradle'
