Adds action type.

--- a/financial-connections-example/src/main/AndroidManifest.xml
+++ b/financial-connections-example/src/main/AndroidManifest.xml
@@ -35,6 +35,7 @@
         <activity
             android:name="com.stripe.android.financialconnections.example.FinancialConnectionsPlaygroundActivity"
             android:launchMode="singleTask"
+            android:windowSoftInputMode="adjustResize"
             android:theme="@style/AppTheme.NoActionBar"
             android:exported="true">
             <intent-filter>
