--- a/maestro/common/subflow-skip-chrome-welcome.yaml
+++ b/maestro/common/subflow-skip-chrome-welcome.yaml
@@ -1,6 +1,10 @@
 appId: ${APP_ID}
 ---
 ####### Bypass Chrome on-boarding screen #######
+# USE CHROME WITHOUT AN ACCOUNT
+- tapOn:
+    id: com.android.chrome:id/signin_fre_dismiss_button
+    optional: true
 # ACCEPT TERMS
 - tapOn:
     id: "com.android.chrome:id/terms_accept"
