Add `WorkManager` dependency

--- a/stripe-core/build.gradle
+++ b/stripe-core/build.gradle
@@ -19,12 +19,15 @@ dependencies {
     implementation libs.kotlin.serialization
     implementation libs.androidx.viewModel
 
+    compileOnly libs.androidx.workManager
+
     ksp libs.daggerCompiler
 
     testImplementation testLibs.androidx.archCore
     testImplementation testLibs.androidx.core
     testImplementation testLibs.androidx.fragment
     testImplementation testLibs.androidx.testRunner
+    testImplementation testLibs.androidx.workManager
     testImplementation testLibs.json
     testImplementation testLibs.junit
     testImplementation testLibs.kotlin.annotations
