--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -69,6 +69,7 @@ ext.versions = [
         truth                       : '1.1.3',
         turbine                     : '1.0.0',
         uiAutomator                 : '2.2.0',
+        workManager                 : '2.9.0',
         zxing                       : '3.5.2',
         microblinkCapture           : '1.2.0',
 ]
@@ -121,6 +122,7 @@ ext.libs = [
                 navigationUi      : "androidx.navigation:navigation-ui-ktx:${versions.androidxNavigation}",
                 preference        : "androidx.preference:preference-ktx:${versions.androidxPreference}",
                 recyclerView      : "androidx.recyclerview:recyclerview:${versions.androidxRecyclerview}",
+                workManager       : "androidx.work:work-runtime-ktx:${versions.workManager}",
         ],
         camera                              : [
                 core     : "androidx.camera:camera-core:${versions.cameraX}",
@@ -196,6 +198,7 @@ ext.testLibs = [
                 coreKtx    : "androidx.test:core-ktx:${versions.androidTest}",
                 truth      : "androidx.test.ext:truth:${versions.androidTest}",
                 uiAutomator: "androidx.test.uiautomator:uiautomator:${versions.uiAutomator}",
+                workManager: "androidx.work:work-testing:${versions.workManager}",
         ],
         espresso             : [
                 accessibility : "androidx.test.espresso:espresso-accessibility:${versions.espresso}",
