--- a/financial-connections-example/build.gradle
+++ b/financial-connections-example/build.gradle
@@ -55,6 +55,7 @@ dependencies {
     implementation libs.androidx.coreKtx
     implementation libs.androidx.lifecycle
     implementation libs.androidx.liveDataKtx
+    implementation libs.androidx.workManager
     implementation libs.compose.activity
     implementation libs.compose.material
     implementation libs.compose.liveData
