--- a/financial-connections/build.gradle
+++ b/financial-connections/build.gradle
@@ -89,8 +89,8 @@ android {
 
     kotlinOptions {
         freeCompilerArgs += [
-                "-Xopt-in=kotlin.RequiresOptIn",
-                "-Xopt-in=androidx.compose.material.ExperimentalMaterialApi"
+                "-opt-in=kotlin.RequiresOptIn",
+                "-opt-in=androidx.compose.material.ExperimentalMaterialApi"
         ]
     }
 
