--- a/example/AndroidManifest.xml
+++ b/example/AndroidManifest.xml
@@ -78,6 +78,7 @@
         <activity android:name=".activity.ManualUSBankAccountPaymentMethodActivity"/>
         <activity android:name=".activity.StripeImageActivity"/>
         <activity android:name=".activity.CashAppPayActivity"/>
+        <activity android:name=".activity.AmazonPayActivity"/>
         <activity android:name=".activity.BlikPaymentMethodActivity"/>
         <activity android:name=".activity.RevolutPayActivity"/>
         <activity android:name=".activity.SwishExampleActivity"/>
