Updates livemode tests.

--- a/maestro/financial-connections/Livemode-Data-Finbank.yaml
+++ b/maestro/financial-connections/Livemode-Data-Finbank.yaml
@@ -34,17 +34,15 @@ tags:
 - inputText: "b_a_n_k"
 - tapOn: "Submit"
 ###############################################
-# SELECT ALL ACCOUNTS
+# SELECT ALL ACCOUNTS (they're preselected)
 - extendedWaitUntil:
-    visible: "Select all accounts"
+    visible: "Connect accounts"
     timeout: 60000
-- tapOn: "Select all accounts" # select all accounts
-- tapOn:
-    text: "Link accounts"
-    retryTapIfNoChange: false
+- tapOn: "Connect accounts" # select all accounts
 # CONFIRM AND COMPLETE
-- assertVisible: ".*Success.*"
-- tapOn: "Done"
+- assertVisible: "Your accounts were connected"
+- tapOn:
+    id: "done_button"
 - assertVisible: ".*Completed!.*"
 - assertVisible: ".*FinBank.*"
 - stopRecording
