--- a/maestro/financial-connections/Livemode-Data-MXBank.yaml
+++ b/maestro/financial-connections/Livemode-Data-MXBank.yaml
@@ -28,11 +28,15 @@ tags:
 # LOG IN WITH TEST FINBANK INSTITUTION
 - tapOn: "Authorize"
 ###############################################
-# SELECT ALL ACCOUNTS
-# - Mx bank skips account selection
+# SELECT ALL ACCOUNTS (they're preselected)
+- extendedWaitUntil:
+    visible: "Connect accounts"
+    timeout: 60000
+- tapOn: "Connect accounts" # select all accounts
 # CONFIRM AND COMPLETE
-- assertVisible: ".*Success.*"
-- tapOn: "Done"
+- assertVisible: "Your accounts were connected"
+- tapOn:
+    id: "done_button"
 - assertVisible: ".*Completed!.*"
 - assertVisible: ".*MX Bank.*"
 - stopRecording
