--- a/financial-connections/build.gradle
+++ b/financial-connections/build.gradle
@@ -56,6 +56,7 @@ dependencies {
     testImplementation testLibs.androidx.core
     testImplementation testLibs.androidx.fragment
     testImplementation testLibs.androidx.junit
+    testImplementation testLibs.androidx.lifecycle
     testImplementation testLibs.json
     testImplementation testLibs.junit
     testImplementation testLibs.kotlin.annotations
