--- a/maestro/financial-connections/Web-Testmode-Data-TestOauthInstitution.yaml
+++ b/maestro/financial-connections/Web-Testmode-Data-TestOauthInstitution.yaml
@@ -19,8 +19,7 @@ tags:
 # Common: web AuthFlow - connect institution
 - tapOn: "Agree and continue"
 # SELECT OAUTH INSTITUTION
-- assertVisible: "Test Institution"
-- tapOn: "Test Institution"
+- tapOn: ".*Test Institution.*"
 # SELECT ALL ACCOUNTS
 - extendedWaitUntil:
     visible: "Connect accounts"
