--- a/maestro/financial-connections/Testmode-Token-ManualEntry.yaml
+++ b/maestro/financial-connections/Testmode-Token-ManualEntry.yaml
@@ -15,6 +15,7 @@ tags:
       id: "consent_cta"
     timeout: 30000
 - tapOn: "Manually verify instead"
+# MANUALLY ENTER BANK ACCOUNT
 - assertVisible: "Enter bank details"
 - tapOn:
     id: "RoutingInput"
@@ -32,5 +33,8 @@ tags:
 - tapOn:
     text: "Submit"
     retryTapIfNoChange: false
+# CONFIRM AND COMPLETE
+- tapOn:
+    id: "done_button"
 - assertVisible: ".*Completed!.*"
 - stopRecording
