--- a/bitrise.yml
+++ b/bitrise.yml
@@ -28,16 +28,16 @@ pipelines:
 stages:
   stage-trigger-run-all:
     workflows:
-      - check: { }
-      - test: { }
-      - run-instrumentation-tests: { }
+#      - check: { }
+#      - test: { }
+#      - run-instrumentation-tests: { }
       - run-paymentsheet-instrumentation-tests: { }
-      - run-example-instrumentation-tests: { }
-      - run-financial-connections-instrumentation-tests: { }
-      - run-cardscan-instrumentation-tests: { }
-      - run-paymentsheet-end-to-end-tests: { }
-      - run-paymentsheet-screenshot-tests: { }
-      - check-dependencies: { }
+#      - run-example-instrumentation-tests: { }
+#      - run-financial-connections-instrumentation-tests: { }
+#      - run-cardscan-instrumentation-tests: { }
+#      - run-paymentsheet-end-to-end-tests: { }
+#      - run-paymentsheet-screenshot-tests: { }
+#      - check-dependencies: { }
   stage-build-connections-debug:
     workflows:
       - build-connections-debug: { }
@@ -264,9 +264,9 @@ workflows:
             - boot_timeout: 600
       - script@1:
           title: Execute instrumentation tests
-          timeout: 1200
+          timeout: 3600
           inputs:
-            - content: ./gradlew :paymentsheet:connectedAndroidTest
+            - content: ./count_failures
   run-example-instrumentation-tests:
     before_run:
       - start_emulator
