[V3] Update Maestro tests (#8050)
* [skip ci] Start PR

* Update Testmode-Data-TestOauthInstitution.yaml

* Update Testmode-PaymentIntent-TestInstitution.yaml

* Update Testmode-PaymentIntent-TestInstitution-Networking.yaml

* Update Testmode-Token-ManualEntry.yaml

* Updates livemode tests.

* Test execution.

* Updates web tests.

* Updates maestro.

* Update web test.

* Updates manual entry test.

* Updates web test.

* Accounts auto select.

* Reset bitrise.

* Adds back not visible check.

* Updates test.

--- a/maestro/financial-connections/Testmode-Token-ManualEntry.yaml
+++ b/maestro/financial-connections/Testmode-Token-ManualEntry.yaml
@@ -14,8 +14,9 @@ tags:
     visible:
       id: "consent_cta"
     timeout: 30000
-- tapOn: "Enter account details manually instead"
-- assertVisible: "Enter bank account details"
+- tapOn: "Manually verify instead"
+# MANUALLY ENTER BANK ACCOUNT
+- assertVisible: "Enter bank details"
 - tapOn:
     id: "RoutingInput"
 - inputText: "110000000"
@@ -30,7 +31,10 @@ tags:
     id: "ConfirmAccountInput"
 - inputText: "000123456789"
 - tapOn:
-    text: "Continue"
+    text: "Submit"
     retryTapIfNoChange: false
+# CONFIRM AND COMPLETE
+- tapOn:
+    id: "done_button"
 - assertVisible: ".*Completed!.*"
 - stopRecording
