--- a/stripe-core/build.gradle
+++ b/stripe-core/build.gradle
@@ -17,6 +17,7 @@ dependencies {
     implementation libs.kotlin.coroutines
     implementation libs.kotlin.coroutinesAndroid
     implementation libs.kotlin.serialization
+    implementation libs.androidx.viewModel
 
     ksp libs.daggerCompiler
 
