--- a/maestro/financial-connections/Web-Testmode-Data-TestOauthInstitution.yaml
+++ b/maestro/financial-connections/Web-Testmode-Data-TestOauthInstitution.yaml
@@ -19,11 +19,7 @@ tags:
 # Common: web AuthFlow - connect institution
 - tapOn: "Agree and continue"
 # SELECT OAUTH INSTITUTION
-- tapOn: ".*Test OAuth Institution.*"
-# Bottom Sheet is not properly detected on Mobile Web, use coords to tap Continue instead
-- waitForAnimationToEnd
-- tapOn:
-    point: "50%,85%"
+- tapOn: ".*Ownership Accounts.*"
 # SELECT ALL ACCOUNTS
 - extendedWaitUntil:
     visible: "Connect accounts"
