[FC][Tests] mobile-web: Use working test bank (#8129)
* Updates tests.

* Updates tests.

--- a/maestro/financial-connections/Web-Testmode-Data-TestOauthInstitution.yaml
+++ b/maestro/financial-connections/Web-Testmode-Data-TestOauthInstitution.yaml
@@ -19,7 +19,7 @@ tags:
 # Common: web AuthFlow - connect institution
 - tapOn: "Agree and continue"
 # SELECT OAUTH INSTITUTION
-- tapOn: ".*Test Institution.*"
+- tapOn: ".*Ownership Accounts.*"
 # SELECT ALL ACCOUNTS
 - extendedWaitUntil:
     visible: "Connect accounts"
