--- a/stripe-ui-core/build.gradle
+++ b/stripe-ui-core/build.gradle
@@ -34,6 +34,7 @@ android {
 
 dependencies {
     implementation project(":stripe-core")
+    implementation libs.androidx.activity
     implementation libs.androidx.annotation
     implementation libs.androidx.coreKtx
     implementation libs.compose.foundation
