Update Maestro tests

--- a/maestro/financial-connections/Livemode-Data-Finbank.yaml
+++ b/maestro/financial-connections/Livemode-Data-Finbank.yaml
@@ -40,7 +40,7 @@ tags:
     timeout: 60000
 - tapOn: "Connect accounts" # select all accounts
 # CONFIRM AND COMPLETE
-- assertVisible: "Your accounts were connected"
+- assertVisible: "Your accounts were connected."
 - tapOn:
     id: "done_button"
 - assertVisible: ".*Completed!.*"
