--- a/link/build.gradle
+++ b/link/build.gradle
@@ -49,13 +49,11 @@ dependencies {
     testImplementation testLibs.kotlin.coroutines
     testImplementation testLibs.turbine
     testImplementation testLibs.espresso.intents
+    testImplementation testLibs.androidx.composeUi
+    testImplementation testLibs.androidx.archCore
 
     androidTestImplementation testLibs.truth
     androidTestImplementation testLibs.androidx.junit
-
-    // Test rules and transitive dependencies:
-    androidTestImplementation testLibs.androidx.composeUi
-    androidTestImplementation testLibs.androidx.archCore
 }
 
 android {
