--- a/payments-core/build.gradle
+++ b/payments-core/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     implementation libs.dagger
     implementation libs.kotlin.coroutines
     implementation libs.kotlin.coroutinesAndroid
+    implementation libs.kotlin.coroutinesPlayServices
     implementation libs.material
     implementation libs.playServicesWallet
     implementation libs.instantApps
