Refactor duplicated PaparazziRule code to common module

--- a/build.gradle
+++ b/build.gradle
@@ -96,6 +96,7 @@ apiValidation {
             "payments-core-testing",
             "paymentsheet-example",
             "stripecardscan-example",
+            "screenshot-testing",
     ]
     nonPublicMarkers.add("androidx.annotation.RestrictTo")
     nonPublicMarkers.add("dagger.internal.DaggerGenerated")
