--- a/stripe-ui-core/build.gradle
+++ b/stripe-ui-core/build.gradle
@@ -53,6 +53,7 @@ dependencies {
     debugImplementation libs.compose.uiTestManifest
     debugImplementation libs.compose.uiTooling
 
+    testImplementation project(':screenshot-testing')
     testImplementation testLibs.androidx.archCore
     testImplementation testLibs.androidx.core
     testImplementation testLibs.androidx.junitKtx
