--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,14 @@
+plugins {
+    id "com.gradle.develocity" version "3.17.1"
+}
+
+develocity {
+    buildScan {
+        termsOfUseUrl = "https://gradle.com/help/legal-terms-of-use"
+        termsOfUseAgree = "yes"
+    }
+}
+
 include ':camera-core'
 include ':example'
 include ':financial-connections'
