--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ plugins {
     id 'io.github.gradle-nexus.publish-plugin' version '1.3.0'
     id 'io.codearte.nexus-staging' version '0.30.0'
     id 'com.google.devtools.ksp' version '1.9.22-1.0.17' apply false
+    id 'dev.drewhamilton.poko' version '0.15.2' apply false
 }
 
 apply plugin: "io.gitlab.arturbosch.detekt"
@@ -95,6 +96,7 @@ apiValidation {
             "payments-core-testing",
             "paymentsheet-example",
             "stripecardscan-example",
+            "screenshot-testing",
     ]
     nonPublicMarkers.add("androidx.annotation.RestrictTo")
     nonPublicMarkers.add("dagger.internal.DaggerGenerated")
