--- a/example/AndroidManifest.xml
+++ b/example/AndroidManifest.xml
@@ -83,6 +83,7 @@
         <activity android:name=".activity.RevolutPayActivity"/>
         <activity android:name=".activity.SwishExampleActivity"/>
         <activity android:name=".activity.MobilePayExampleActivity"/>
+        <activity android:name=".activity.AlmaActivity"/>
     </application>
 
 </manifest>
