--- a/maestro/financial-connections/Testmode-Data-TestOauthInstitution.yaml
+++ b/maestro/financial-connections/Testmode-Data-TestOauthInstitution.yaml
@@ -30,7 +30,9 @@ tags:
     visible: "Connect accounts"
     timeout: 60000
 - tapOn: "Connect accounts" # select all accounts
-
+# SKIP NETWORKING
+- tapOn:
+    id: "skip_cta"
 # CONFIRM AND COMPLETE
 - assertVisible: "Your accounts were connected."
 - tapOn:
