--- a/paymentsheet-example/src/main/AndroidManifest.xml
+++ b/paymentsheet-example/src/main/AndroidManifest.xml
@@ -45,6 +45,7 @@
         <activity android:name="com.stripe.android.paymentsheet.example.samples.ui.customersheet.playground.CustomerSheetPlaygroundActivity" />
         <activity android:name="com.stripe.android.paymentsheet.example.samples.ui.addresselement.AddressElementExampleActivity" />
         <activity android:name="com.stripe.android.paymentsheet.example.playground.activity.QrCodeActivity" />
+        <activity android:name=".playground.VenmoActivity" />
         <activity
             android:name="com.stripe.android.paymentsheet.example.playground.PaymentSheetPlaygroundActivity"
             android:exported="true"
