--- a/maestro/financial-connections/Testmode-PaymentIntent-TestInstitution.yaml
+++ b/maestro/financial-connections/Testmode-PaymentIntent-TestInstitution.yaml
@@ -6,7 +6,7 @@ tags:
 ---
 - startRecording: ${'/tmp/test_results/testmode-paymentintent-testinstitution-' + new Date().getTime()}
 - clearState
-- openLink: stripeconnectionsexample://playground?flow=PaymentIntent&financial_connections_override_native=native&merchant=testmode&permissions=payment_method
+- openLink: stripeconnectionsexample://playground?flow=PaymentIntent&financial_connections_override_native=native&merchant=testmode&permissions=payment_method&financial_connections_confirm_intent=true
 - tapOn:
     id: "connect_accounts"
 # Wait until the consent button is visible
@@ -37,5 +37,7 @@ tags:
 # CONFIRM AND COMPLETE
 - tapOn:
     id: "done_button"
-- assertVisible: ".*Intent Confirmed!.*"
+- scrollUntilVisible:
+    element:
+      text: ".*Intent Confirmed!.*"
 - stopRecording
