Add new `CustomerSheet` playground

--- a/paymentsheet-example/src/main/AndroidManifest.xml
+++ b/paymentsheet-example/src/main/AndroidManifest.xml
@@ -61,6 +61,19 @@
                     />
             </intent-filter>
         </activity>
+        <activity android:name=".playground.customersheet.CustomerSheetPlaygroundActivity" android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:scheme="stripepaymentsheetexample"
+                    android:host="customersheetplayground"
+                    />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
