--- a/maestro/financial-connections/Livemode-Data-MXBank.yaml
+++ b/maestro/financial-connections/Livemode-Data-MXBank.yaml
@@ -5,7 +5,7 @@ tags:
 ---
 - startRecording: ${'/tmp/test_results/livemode-data-mxbank-' + new Date().getTime()}
 - clearState
-- openLink: stripeconnectionsexample://playground?flow=Data&financial_connections_override_native=native&merchant=live_testing
+- openLink: stripeconnectionsexample://playground?flow=Data&financial_connections_override_native=native&merchant=live_testing&financial_connections_test_mode=false
 - tapOn:
     id: "connect_accounts"
 # Wait until the consent button is visible
