--- a/maestro/financial-connections/Testmode-Token-ManualEntry.yaml
+++ b/maestro/financial-connections/Testmode-Token-ManualEntry.yaml
@@ -6,7 +6,7 @@ tags:
 ---
 - startRecording: ${'/tmp/test_results/testmode-token_manualentry-' + new Date().getTime()}
 - clearState
-- openLink: stripeconnectionsexample://playground?flow=Token&financial_connections_override_native=native&merchant=testmode&permissions=balances,payment_method
+- openLink: stripeconnectionsexample://playground?flow=Token&financial_connections_override_native=native&financial_connections_test_mode=true&merchant=testmode&permissions=balances,payment_method
 - tapOn:
     id: "connect_accounts"
 # Wait until the consent button is visible
