Re-add some FC merchants for Maestro tests

--- a/maestro/financial-connections/Testmode-PaymentIntent-TestInstitution-UnplannedDowntime.yaml
+++ b/maestro/financial-connections/Testmode-PaymentIntent-TestInstitution-UnplannedDowntime.yaml
@@ -24,5 +24,7 @@ tags:
 - tapOn: "Down Bank (unscheduled)"
 # Close flow from error page
 - tapOn: "Close icon"
-- assertVisible: "Failed! Request-id: .*"
+- scrollUntilVisible:
+    element:
+      text: "Failed! Request-id: .*"
 - stopRecording
