--- a/paymentsheet/src/main/AndroidManifest.xml
+++ b/paymentsheet/src/main/AndroidManifest.xml
@@ -33,5 +33,8 @@
             android:name=".ui.SepaMandateActivity"
             android:theme="@style/StripePaymentSheetDefaultTheme"
             android:exported="false" />
+        <activity android:name=".ExternalPaymentMethodActivity"
+            android:theme="@style/StripePayLauncherDefaultTheme"
+            android:exported="false" />
     </application>
 </manifest>
